Fix Hero image align

--- a/assets/css/src/_feature-boxes.css
+++ b/assets/css/src/_feature-boxes.css
@@ -65,10 +65,20 @@
   background-color: var(--color-theme-orange);
   grid-row: 3/4;
   grid-column: 1/3;
+  
 }
-
 .feature-box:nth-child(4n+4) .button{
   color: var(--color-theme-orange);
+  
+}
+
+
+.feature-box:nth-child(4n+4) .wrap-large{
+  background-image: url(../images/BGCB-Website-Mobile-Txtr-Square_Shaped_Dots.svg), url(../images/BGCB-Website-Mobile-Txtr-Square_Shaped_Dots.svg);
+  background-size: 7em, 7em;
+  background-repeat: no-repeat, no-repeat;
+  background-position-x: 0em, right;
+  background-position-y: center, bottom;
 }
 
 @media (--wide-window-query) {
