--- a/assets/css/src/front-page.css
+++ b/assets/css/src/front-page.css
@@ -41,7 +41,12 @@
 	position: relative;
 }
 
-
+.hero .hero-img-wrap {
+	display: flex;
+	align-items: center;
+	max-height: 90vh;
+	overflow: hidden;
+}
 
 .hero .hero-cta {
 	background: white;
